--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <li><a href="Crucigrama.html" target="contentFrame">✏️ Crucigrama</a></li>
             <li><a href="imagentriptico.html" target="contentFrame">📰 Tríptico</a></li>
             <li><a href="folleto.html" target="contentFrame">📘 Folleto</a></li>
+            <li><a href="Volante.html" target="contentFrame">📝 Volante</a></li>
             <li><a href="flyrer.html" target="contentFrame">🧾 Flyer</a></li>
             <li><a href="caligrama.html" target="contentFrame">📄 Caligrama</a></li>
             <li><a href="presentacionmodulo0.html" target="contentFrame">📁 Presentacion PowerPoint</a></li>
@@ -176,3 +177,4 @@ links.forEach(link=>{
 
 </body>
 </html>
+
