--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 <div class="container">
 
+    <!-- Botón SIEMPRE visible --> <button class="toggle-menu">☰</button>
     <!-- MENÚ LATERAL -->
     <nav class="sidebar">
         <button class="toggle-menu">☰</button>
@@ -177,4 +178,5 @@ links.forEach(link=>{
 
 </body>
 </html>
+
 
