--- a/index.html
+++ b/index.html
@@ -155,30 +155,26 @@ links.forEach(link=>{
 });
 </script>
 
-<!-- PIE DE PÁGINA -->
 <footer class="animated-footer">
-    <div class="footer-social">
-        <div class="footer-box">
-            <img src="Captura de pantalla 2025-11-25 123615.png" alt="Instagram Logo">
-            <p>Instagram<br>@Dan18xd_</p>
-        </div>
-        <div class="footer-box">
-            <img src="Captura de pantalla 2025-11-25 123621.png" alt="Twitter Logo">
-            <p>Twitter<br>@Dan18xd_</p>
-        </div>
-        <div class="footer-box">
-            <img src="Captura de pantalla 2025-11-25 123625.png" alt="YouTube Logo">
-            <p>Youtube<br>@Dan18xd_</p>
-        </div>
+  <div class="footer-social">
+    <div class="footer-box">
+      <img src="instagram.png" alt="Instagram">
+      <p>@Dan18xd_</p>
     </div>
-    <div class="footer-info">
-        <p>© 2025 | Derechos reservados</p>
-        <p>Elaborado por Dan18xd_</p>
-        <p>Grupo: 304 · Lista: 25632 · Fecha: 01/12/2025</p>
-        <p>Disponible en plataformas: Blogger y WordPress</p>
-        <p>Comunícate al: 71237895484</p>
+    <div class="footer-box">
+      <img src="twitter.png" alt="Twitter">
+      <p>@Dan18xd_</p>
     </div>
-</footer>
+    <div class="footer-box">
+      <img src="youtube.png" alt="YouTube">
+      <p>@Dan18xd_</p>
+    </div>
+  </div>
 
-</body>
-</html>
+  <div class="footer-info">
+    © 2025 | Derechos reservados · Elaborado por Dan18xd_  
+    <br>Grupo: 304 · Lista: 25632 · Fecha: 01/12/2025  
+    <br>Disponible en plataformas: Blogger y WordPress  
+    <br>Comunícate al: 71237895484
+  </div>
+</footer>
