--- a/index.html
+++ b/index.html
@@ -72,7 +72,16 @@
 
     <!-- MENÚ LATERAL -->
     <nav class="sidebar">
-        <button class="toggle-menu">☰</button>
+       <button class="toggle-menu">☰</button>
+
+<aside class="sidebar">
+  <ul>
+    <li>Inicio</li>
+    <li>Perfil</li>
+    <li>Galería</li>
+  </ul>
+</aside>
+
         <ul>
             <li><a href="inicio.html" target="contentFrame" id="link-inicio">🏠 Inicio</a></li>
             <li><a href="Proyecto productivo.html" target="contentFrame">📈 Proyecto productivo</a></li>
@@ -180,3 +189,4 @@ links.forEach(link=>{
 
 </body>
 </html>
+
