--- a/inicio.html
+++ b/inicio.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Inicio</title>
+<title>Vive Feliz Sin Drogas</title>
 
 <style>
 :root{
@@ -78,7 +78,7 @@ body{
     }
 }
 
-/* ===== TITULO CON GLITCH SUAVE ===== */
+/* ===== TITULO ===== */
 h1{
     font-size:42px;
     margin:0;
@@ -109,14 +109,15 @@ h1::after{
     to{ opacity:1; transform:translateY(0); }
 }
 
-/* ===== SUBTEXTO ===== */
+/* ===== TEXTO ===== */
 p{
     margin-top:18px;
     color:var(--soft);
     font-size:17px;
+    line-height:1.6;
 }
 
-/* ===== BARRA PROGRESIVA ===== */
+/* ===== BARRA ===== */
 .loader{
     margin:30px auto 20px;
     width:180px;
@@ -139,7 +140,7 @@ p{
     100%{ transform:translateX(250%) }
 }
 
-/* ===== ICONOS LINEALES ===== */
+/* ===== ICONOS ===== */
 .iconos{
     margin-top:24px;
     display:flex;
@@ -173,21 +174,27 @@ p{
 
 <!-- TARJETA -->
 <div class="card">
-    <h1 data-text="Bienvenido">Bienvenido</h1>
-    <p>Explora mis proyectos desde el menú lateral</p>
+    <h1 data-text="Vive Feliz Sin Drogas">Vive Feliz Sin Drogas</h1>
+
+    <p>
+      <strong>Objetivo general:</strong><br>
+      Prevenir y reducir el consumo de sustancias psicoactivas, así como reforzar
+      factores protectores en comunidades mediante el diseño e implementación de
+      talleres informativos y educativos sobre estas sustancias.
+    </p>
 
     <div class="loader">
         <span></span>
     </div>
 
     <div class="iconos">
-        <span>🏠</span>
-        <span>🧩</span>
-        <span>✏️</span>
-        <span>📰</span>
+        <span>🌱</span>
+        <span>🧠</span>
+        <span>💬</span>
         <span>📘</span>
-        <span>📄</span>
-        <span>🎥</span>
+        <span>🤝</span>
+        <span>🏫</span>
+        <span>💙</span>
     </div>
 </div>
 
