--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 
 
     <!-- MENÚ LATERAL -->
-       <button class="toggle-menu">☰</button>
-
-<aside class="sidebar">
+    <nav class="sidebar">
+        <button class="toggle-menu">☰</button>
         <ul>
             <li><a href="inicio.html" target="contentFrame" id="link-inicio">🏠 Inicio</a></li>
             <li><a href="Proyecto productivo.html" target="contentFrame">📈 Proyecto productivo</a></li>
@@ -181,5 +180,3 @@ links.forEach(link=>{
 
 </body>
 </html>
-
-
